--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,3 +36,24 @@ header{
     height: 100%;
     border-radius: 3px;
 }
+
+.logo--header{
+    width: 100px;
+    margin-left: 50px;
+    color: white;
+    position: relative;
+    text-transform: uppercase;
+    font-size: 30px;
+    letter-spacing: 4px;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    animation: animate 6s linear infinite;
+    background-size: 80%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(255,255,255,0);
+    font-family: 'Lobster', cursive;
+    margin-bottom: 0;
+    margin-top: 0;
+    text-decoration: none;
+}
