--- a/src/components/Movie row/MovieRow.css
+++ b/src/components/Movie row/MovieRow.css
@@ -12,7 +12,7 @@
 }
 
 .movieRow--list{
-    width: 99999px;
+    transition: all ease .5s
 }
 
 .movieRow--item{
@@ -31,4 +31,47 @@
 .movieRow--item img:hover{
     transform: scale(1);
    
+}
+
+.arrow{
+    position: relative;
+    max-width: 100%;
+    opacity: 80%;
+}
+
+.left--icon, .right--icon{
+    position: absolute;
+    width: 40px;
+    height: 225px;
+    background-color: rgba(0, 0, 0, 0.555);
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    cursor: pointer;
+    
+    transition: all ease .5s;
+    padding: 5px;
+
+}
+
+
+.left-icon{
+    left: 0;
+}
+
+.right--icon{
+    right: 0;
+
+}
+
+.movieRow:hover .left--icon, .movieRow:hover .right--icon{
+    opacity: 1;
+}
+
+@media (max-width:760px){
+    .left--icon, .right--icon{
+        opacity: 1;
+    }
 }
